# chess

./: README.md  chess.html  chess_clean.html  chess_clean.rmd  chess_explore.html  chess_explore.rmd  chess_fide_rating.py  pyproject.toml
chess/: chess_fide_rating.py  load_data.py
